--- a/helloboyfrined.html
+++ b/helloboyfrined.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>helloboyfriend</title>
+    <style>
+        h1{
+            background-color: gray;
+        }
+    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <a href="https://www.google.com">google</a>
     <div>
-        <h1>아이브</h1>
+        <h1 style="color:white;">아이브</h1>
         <ul>
             <li>유진</li>
             <li>가을</li>
