--- a/20230609_nav/index.html
+++ b/20230609_nav/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>navbar</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -21,7 +22,7 @@
         <div class="nav-toggle" id="nav_toggle">
             <i class="bi bi-list"></i>
         </div>
-
+        <img src="https://cdn.eyesmag.com/content/uploads/posts/2023/03/22/national-puppy-day-naver-maps-0a95d167-c69a-41f2-8981-630f9f39f99b.jpg" alt="image">
     </header>
     Hello World, Hello World, Hello World, Hello World, Hello World, Hello World, 
     Hello World, Hello World, Hello World, Hello World, Hello World, Hello World, 
