--- a/helloboyfrined.html
+++ b/helloboyfrined.html
@@ -11,18 +11,19 @@
         }
     </style>
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <a href="https://www.google.com">google</a>
     <div>
         <h1 style="color:white;">아이브</h1>
         <ul>
-            <li>유진</li>
-            <li>가을</li>
-            <li>원영</li>
-            <li>레이</li>
-            <li>리즈</li>
-            <li>이서</li>
+            <li class="korea leader">유진</li> <!--클래스의 구분은 띄어쓰기임 -->
+            <li class="korea incheon">가을</li>
+            <li class="korea" style="color:violet;">원영</li>
+            <li class="japan">레이</li>
+            <li class="korea">리즈</li>
+            <li class="korea">이서</li>
         </ul>
         <ul>
             <li>유진</li>
