--- a/20230609_nav/index.html
+++ b/20230609_nav/index.html
@@ -7,23 +7,25 @@
     <title>navbar</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
     <header>
-        <nav class="nav container"></nav> <!-- 클래스 두개 할 때 띄어쓰기로 분리함 시험문제 내기 좋겠죠~ -->
-        <a href="" class="nav-logo">
-            <i class="bi bi-bookmarks"></i>
-        </a>
-        <ul class="nav-list">
-            <li class="nav-item"><a href="" class="nav-link">책장</a></li>
-            <li class="nav-item"><a href="" class="nav-link">리뷰</a></li>
-            <li class="nav-item"><a href="" class="nav-link">캘린더</a></li>
-        </ul>
-        <div class="nav-toggle" id="nav_toggle">
-            <i class="bi bi-list"></i>
-        </div>
-        
+        <nav class="nav container">
+            <a href="" class="nav-logo">
+                <i class="bi bi-bookmark"></i>
+            </a>
+            <ul class="nav-list">
+                <li class="nav-item"><a href="" class="nav-link">책장</a></li>
+                <li class="nav-item"><a href="" class="nav-link">리뷰</a></li>
+                <li class="nav-item"><a href="" class="nav-link">캘린더</a></li>
+            </ul>
+            <div class="new-toggle" id="nav_toggle">
+                <i class="bi bi-list"></i>
+            </div>
+        </nav> <!-- 클래스 두개 할 때 띄어쓰기로 분리함 시험문제 내기 좋겠죠~ -->
     </header>
+    <img src="https://cdn.eyesmag.com/content/uploads/posts/2023/03/22/national-puppy-day-naver-maps-0a95d167-c69a-41f2-8981-630f9f39f99b.jpg" alt="image">
     Hello World, Hello World, Hello World, Hello World, Hello World, Hello World, 
     Hello World, Hello World, Hello World, Hello World, Hello World, Hello World, 
     Hello World, Hello World, Hello World, Hello World, Hello World, Hello World, 
@@ -35,6 +37,5 @@
     Hello World, Hello World, Hello World, Hello World, Hello World, Hello World, 
     Hello World, Hello World, Hello World, Hello World, Hello World, Hello World, 
     Hello World, Hello World, Hello World, Hello World, Hello World, Hello World
-    <img src="https://cdn.eyesmag.com/content/uploads/posts/2023/03/22/national-puppy-day-naver-maps-0a95d167-c69a-41f2-8981-630f9f39f99b.jpg" alt="image">
 </body>
 </html>
