--- a/20230609_nav/index.html
+++ b/20230609_nav/index.html
@@ -15,7 +15,7 @@
             <a href="" class="nav-logo">
                 <i class="bi bi-bookmark"></i>
             </a>
-            <ul class="nav-list">
+            <ul class="nav-list show-menu">
                 <li class="nav-item"><a href="" class="nav-link">책장</a></li>
                 <li class="nav-item"><a href="" class="nav-link">리뷰</a></li>
                 <li class="nav-item"><a href="" class="nav-link">캘린더</a></li>
