nav js HTML -> js, onclick

--- a/20230609_nav/index.html
+++ b/20230609_nav/index.html
@@ -38,4 +38,5 @@
     Hello World, Hello World, Hello World, Hello World, Hello World, Hello World, 
     Hello World, Hello World, Hello World, Hello World, Hello World, Hello World
 </body>
+<script src="js/nav.js"></script>
 </html>
