--- a/20230609_nav/index.html
+++ b/20230609_nav/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
             <div class="new-toggle" id="nav_toggle">
                 <i class="bi bi-list"></i>
             </div>
-        </nav> <!-- 클래스 두개 할 때 띄어쓰기로 분리함 시험문제 내기 좋겠죠~ -->
+        </nav>
     </header>
     <img src="https://cdn.eyesmag.com/content/uploads/posts/2023/03/22/national-puppy-day-naver-maps-0a95d167-c69a-41f2-8981-630f9f39f99b.jpg" alt="image">
     Hello World, Hello World, Hello World, Hello World, Hello World, Hello World, 
@@ -39,4 +39,58 @@
     Hello World, Hello World, Hello World, Hello World, Hello World, Hello World
 </body>
 <script src="js/nav.js"></script>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>navbar</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/nav.css">
+</head>
+<body>
+    <header>
+        <nav class="nav container">
+            <a href="" class="nav-logo">
+                <i class="bi bi-bookmarks"></i>
+            </a>
+
+            <ul class="nav-list">
+                <li class="nav-item"><a href="" class="nav-link">책장</a></li>
+                <li class="nav-item"><a href="" class="nav-link">리뷰</a></li>
+                <li class="nav-item"><a href="" class="nav-link">캘린더</a></li>
+            </ul>
+
+            <div class="nav-toggle" id="nav_toggle">
+                <i class="bi bi-list"></i>
+            </div>
+
+
+
+        </nav><!-- 클래스 두개 할 때 띄어쓰기로 분리함 시험문제 내기 좋겠죠~ -->
+    </header>
+    <img src="https://cdn.eyesmag.com/content/uploads/posts/2023/03/22/national-puppy-day-naver-maps-0a95d167-c69a-41f2-8981-630f9f39f99b.jpg" alt="image">
+
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+
+    <script src="js/nav.js"></script>
+</body>
 </html>
